<resources>
    <string name="app_name">FIFA World Cup Quiz</string>
    <string name="fifa">FIFA</string>
    <string name="world_cup">World Cup</string>
    <string name="quiz">Quiz</string>
    <string name="new_account">Don not have an account? <font color='#2974E4'>Sign Up</font></string>
    <string name="google_sign_up">Sign up with Google</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="wrong_answers">Wrong Answers:</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
</resources>